# elevator_advocacy_platform

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  GEMINI.md  Procfile  README.md  project_spec.md  render.yaml  render_build.sh
backend/: README.md  debug_geoclient.py  final_d17_stats.py  pyproject.toml  smoke_test.py  test_ai_orchestration.py  test_soda.py  verify_ai.py
backend/buildings_app/: admin.py  ai_logic.py  apps.py  logic.py  models.py  serializers.py  signals.py  tasks.py  test_news.py  tests.py  urls.py  views.py
backend/buildings_app/fixtures/: council_districts.json
backend/buildings_app/management/commands/: backfill_council_districts.py  export_district_csv.py  (+8 more)
backend/buildings_app/migrations/: 0001_initial.py  0002_remove_elevatorreport_user_id_building_latitude_and_more.py  0003_buildingnews.py  0004_building_last_news_refresh.py  0005_userprofile.py  0006_advocacylog.py  0007_building_city_council_district_and_more.py  0008_councildistrict.py  0009_councildistrict_last_synced_nullable.py  0010_building_cached_executive_summary.py  0011_councildistrict_committees.py  0012_building_management_company_building_owner_name.py  0013_councildistrict_borough_codes_and_more.py
backend/config/: settings.py  urls.py
backend/orchestration/: base.py  schemas.py  supervisor.py
backend/orchestration/workers/: advocacy_strategist.py  community_reporter.py  soda_researcher.py
backend/scripts/: pre_flight.sh
backend/services/: geoclient.py  geoclient_mock.py  geosearch.py  geosearch_mock.py  news_search.py  representatives.py  soda.py
(+137 files in other folders)
