[project]
name = "backend"
version = "0.1.0"
description = "Elevator Advocacy Platform Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django~=6.0",
    "djangorestframework",
    "requests",
    "python-dotenv",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
